<resources>
    <string name="app_name">Иван Осипов</string>
    <string name="edit_text_phone_hint">Мобильный телефон</string>
    <string name="edit_text_email_hint">Email</string>
    <string name="edit_text_repository_hint">Репозиторий</string>
    <string name="edit_text_vk_profile_hint">Профиль в VK</string>
    <string name="edit_text_about_hint">О себе</string>
    <string name="about">
        Lorem Ipsum - это текст-"рыба",
        часто используемый в печати и вэб-дизайне.
        Lorem Ipsum является стандартной "рыбой"
        для текстов на латинице с начала XVI века.
        В то время некий безымянный печатник создал
        большую коллекцию размеров и форм шрифтов,
        используя Lorem Ipsum для распечатки образцов.
        Lorem Ipsum не только успешно пережил без
        заметных изменений пять веков, но и перешагнул
        в электронный дизайн. Его популяризации в
        новое время послужили публикация листов
        Letraset с образцами Lorem Ipsum в 60-х
        годах и, в более недавнее время, программы
        электронной вёрстки типа Aldus PageMaker,
        в шаблонах которых используется Lorem Ipsum.</string>
    <string name="my_profile">Мой профиль</string>
    <string name="team">Команда</string>
    <string name="user_profile_placeholder_image">Изменить фотографию профиля</string>
    <string name="user_profile_dialog_gallery">Загрузить из галлереи</string>
    <string name="user_profile_dialog_camera">Сделать снимок</string>
    <string name="user_profile_dialog_cancel">Отмена</string>
    <string name="user_profile_dialog_title">Изменить фотографию профиля</string>
    <string name="user_profile_choose_message">Выберите фотографию</string>
    <string name="permission_request">Для корректной работы необходимо дать приложению требуемые разрешения</string>
    <string name="allow">Разешить</string>
    <string name="image_create_error">Не удалось создать файл изображения</string>
    <string name="app_for_action_not_fount_exception">Не найдено приложение для выполнения этого действия</string>

    <string name="auth.login">ВОЙТИ</string>
    <string name="auth.login_text">ВОЙТИ</string>
    <string name="auth.email_user">osipovik89@gmail.com</string>
    <string name="auth.password_text">Пароль</string>
    <string name="auth.get_password">Забыли пароль?</string>
    <string name="auth.email_hint_text">Email</string>
</resources>
