<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.NestedScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_height="match_parent"
    android:layout_width="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    app:layout_behavior=".ui.behaviors.CustomNestedScrollBehavior"
    tools:context=".ui.activities.MainActivity"
    tools:showIn="@layout/scrolling_content">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="@dimen/spacing_small_8"
            android:layout_marginBottom="@dimen/spacing_small_8">

            <ImageView
                style="@style/icon.left"
                android:src="@drawable/ic_local_phone_24dp"/>

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="@dimen/size_large_72"
                android:layout_weight="1"
                android:orientation="horizontal"
                android:layout_marginLeft="@dimen/size_small_32"
                android:layout_marginRight="@dimen/size_small_16"
                android:gravity="bottom">

                <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <EditText
                        android:id="@+id/phone_et"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/edit_text_phone_hint"
                        android:inputType="phone"
                        android:text="8912345678"
                        android:enabled="false"
                        android:textColor="@color/black"
                        android:textColorHint="@color/grey"
                        android:focusable="false"/>

                </android.support.design.widget.TextInputLayout>

            </LinearLayout>

            <ImageView
                android:id="@+id/dial_iv"
                style="@style/icon.right"
                android:src="@drawable/ic_phone_in_talk_24dp"/>

        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="@dimen/line_size"
            android:background="@color/grey_light"
            android:layout_marginLeft="@dimen/spacing_larger_72"></View>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="@dimen/spacing_small_8"
            android:layout_marginBottom="@dimen/spacing_small_8">

            <ImageView
                style="@style/icon.left"
                android:src="@drawable/ic_email_24dp"/>

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="@dimen/size_large_72"
                android:layout_weight="1"
                android:orientation="horizontal"
                android:layout_marginLeft="@dimen/size_small_32"
                android:layout_marginRight="@dimen/size_small_16"
                android:gravity="bottom">

                <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <EditText
                        android:id="@+id/email_et"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/edit_text_email_hint"
                        android:inputType="textEmailAddress"
                        android:text="osipovik89@gmail.com"
                        android:enabled="false"
                        android:textColor="@color/black"
                        android:textColorHint="@color/grey"
                        android:focusable="false"/>

                </android.support.design.widget.TextInputLayout>

            </LinearLayout>

            <ImageView
                android:id="@+id/send_iv"
                style="@style/icon.right"
                android:src="@drawable/ic_send_24dp"/>

        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="@dimen/line_size"
            android:background="@color/grey_light"
            android:layout_marginLeft="@dimen/spacing_larger_72"></View>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="@dimen/spacing_small_8"
            android:layout_marginBottom="@dimen/spacing_small_8">

            <ImageView
                style="@style/icon.left"
                android:src="@drawable/ic_vk_24dp"/>

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="@dimen/size_large_72"
                android:layout_weight="1"
                android:orientation="horizontal"
                android:layout_marginLeft="@dimen/size_small_32"
                android:layout_marginRight="@dimen/size_small_16"
                android:gravity="bottom">

                <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <EditText
                        android:id="@+id/vk_id_et"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/edit_text_vk_profile_hint"
                        android:inputType="textEmailAddress"
                        android:text="vk.com/osipov1704"
                        android:enabled="false"
                        android:textColor="@color/black"
                        android:textColorHint="@color/grey"
                        android:focusable="false"/>

                </android.support.design.widget.TextInputLayout>

            </LinearLayout>

            <ImageView
                android:id="@+id/view_vk_iv"
                style="@style/icon.right"
                android:src="@drawable/ic_visibility_24dp"/>

        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="@dimen/line_size"
            android:background="@color/grey_light"
            android:layout_marginLeft="@dimen/spacing_larger_72"></View>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="@dimen/spacing_small_8"
            android:layout_marginBottom="@dimen/spacing_small_8">

            <ImageView
                style="@style/icon.left"
                android:src="@drawable/ic_octocat_24dp"/>

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="@dimen/size_large_72"
                android:layout_weight="1"
                android:orientation="horizontal"
                android:layout_marginLeft="@dimen/size_small_32"
                android:layout_marginRight="@dimen/size_small_16"
                android:gravity="bottom">

                <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <EditText
                        android:id="@+id/repository_et"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/edit_text_repository_hint"
                        android:inputType="textUri"
                        android:text="github.com/osipovik/DevIntensive"
                        android:enabled="false"
                        android:textColor="@color/black"
                        android:textColorHint="@color/grey"
                        android:focusable="false"/>

                </android.support.design.widget.TextInputLayout>

            </LinearLayout>

            <ImageView
                android:id="@+id/view_github_iv"
                style="@style/icon.right"
                android:src="@drawable/ic_visibility_24dp"/>

        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="@dimen/line_size"
            android:background="@color/grey_light"
            android:layout_marginLeft="@dimen/spacing_larger_72"></View>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="@dimen/spacing_small_8"
            android:layout_marginBottom="@dimen/spacing_small_8">

            <ImageView
                style="@style/icon.left"
                android:src="@drawable/ic_account_circle_24dp"/>

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="horizontal"
                android:layout_marginLeft="@dimen/size_small_32"
                android:layout_marginRight="@dimen/size_small_16"
                android:gravity="bottom">

                <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <EditText
                        android:id="@+id/about_et"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/edit_text_about_hint"
                        android:inputType="textMultiLine"
                        android:text="@string/about"
                        android:enabled="false"
                        android:textColor="@color/black"
                        android:textColorHint="@color/grey"
                        android:focusable="false"/>

                </android.support.design.widget.TextInputLayout>

            </LinearLayout>

        </LinearLayout>

    </LinearLayout>

</android.support.v4.widget.NestedScrollView>